# libcamera

./: .b4-config  .clang-format  .clang-tidy  .editorconfig  .gitignore  .tarball-version  COPYING.rst  README.md  README.rst  REUSE.toml  meson.build  meson_options.txt
Documentation/: Doxyfile-common.in  Doxyfile-internal.in  Doxyfile-public.in  Doxyfile.in  camera-sensor-model.rst  code-of-conduct.rst  coding-style.rst  conf.py  conf.py.in  contributing.rst  docs.rst  documentation-contents.rst  environment_variables.rst  feature_requirements.rst  gen-doxyfile.py  getting-started.rst  index.rst  install-doxygen.sh  introduction.rst  isp-feature-matrix.rst  lens_driver_requirements.rst  libcamera_architecture.rst  mainpage.dox  mali-c55.dot  meson.build  python-bindings.rst  runtime_configuration.rst  sensor-support.rst  sensor_driver_requirements.rst  software-isp-benchmarking.rst  thread-safety.dox
Documentation/api-html/: index.rst
Documentation/design/: ae.rst
Documentation/guides/: application-developer.rst  introduction.rst  ipa.rst  pipeline-handler.rst  tracing.rst
Documentation/internal-api-html/: index.rst
Documentation/public-api/: index.rst
Documentation/theme/: footer.html  layout.html  search.html  theme.conf
include/libcamera/: bound_method.h  buffer.h  camera.h  camera_manager.h  class.h  color_space.h  compiler.h  control_ids.h  control_ids.h.in  controls.h  event_dispatcher.h  event_notifier.h  extensible.h  fence.h  file_descriptor.h  formats.h.in  framebuffer.h  framebuffer_allocator.h  gen-formats.py  gen-header.sh  geometry.h  libcamera.h  logging.h  meson.build  object.h  orientation.h  pixel_format.h  pixelformats.h  property_ids.h.in  request.h  signal.h  span.h  stream.h  timer.h  transform.h  version.h.in
src/: meson.build
src/android/: camera3_hal.cpp  camera_buffer.h  camera_capabilities.cpp  camera_capabilities.h  camera_device.cpp  camera_device.h  camera_hal_config.cpp  camera_hal_config.h  camera_hal_manager.cpp  camera_hal_manager.h  camera_metadata.cpp  camera_metadata.h  camera_ops.cpp  camera_ops.h  camera_proxy.cpp  camera_proxy.h  camera_request.cpp  camera_request.h  camera_stream.cpp  camera_stream.h  camera_worker.cpp  camera_worker.h  cros_mojo_token.h  frame_buffer_allocator.h  hal_framebuffer.cpp  hal_framebuffer.h  meson.build  post_processor.h  thread_rpc.cpp  thread_rpc.h
src/apps/: meson.build
src/cam/: buffer_writer.cpp  buffer_writer.h  cam.cpp  camera_session.cpp  camera_session.h  capture-script.yaml  capture.cpp  capture.h  capture_script.cpp  capture_script.h  dng_writer.cpp  drm.cpp  drm.h  event_loop.cpp  event_loop.h  file_sink.cpp  file_sink.h  frame_sink.h  image.cpp  image.h  kms_sink.cpp  kms_sink.h  main.cpp  main.h  meson.build  options.cpp  options.h  sdl_sink.cpp  sdl_texture.cpp  sdl_texture.h  sdl_texture_mjpg.cpp  sdl_texture_mjpg.h  sdl_texture_yuv.cpp  sdl_texture_yuv.h  sdl_texture_yuyv.cpp  sdl_texture_yuyv.h  stream_options.cpp  stream_options.h
src/gstreamer/: gstlibcamera-controls.cpp.in  gstlibcamera-controls.h  gstlibcamera-utils.cpp  gstlibcamera-utils.h  gstlibcamera.c  gstlibcamera.cpp  gstlibcameraallocator.cpp  gstlibcameraallocator.h  gstlibcamerapad.cpp  gstlibcamerapad.h  gstlibcamerapool.cpp  gstlibcamerapool.h  gstlibcameraprovider.cpp  gstlibcameraprovider.h  gstlibcamerasrc.cpp  gstlibcamerasrc.h  meson.build
src/ipa/: gen-ipa-priv-key.sh  ipa-sign-install.sh  ipa-sign.sh  ipa_dummy.cpp  ipa_dummy_isolate.cpp  ipa_vimc.cpp  meson.build
src/lc-compliance/: environment.cpp  environment.h  main.cpp  meson.build  results.cpp  results.h  simple_capture.cpp  simple_capture.h  single_stream.cpp  tests.h
src/libcamera/: bayer_format.cpp  bound_method.cpp  buffer.cpp  byte_stream_buffer.cpp  camera.cpp  camera_controls.cpp  camera_lens.cpp  camera_manager.cpp  camera_sensor.cpp  camera_sensor_properties.cpp  class.cpp  clock_recovery.cpp  color_space.cpp  control_ids.cpp  control_ids.cpp.in  control_ids.yaml  control_ids_core.yaml  control_ids_debug.yaml  control_ids_draft.yaml  control_ids_rpi.yaml  control_ranges.yaml  control_serializer.cpp  control_validator.cpp  controls.cpp  converter.cpp  debug_controls.cpp  delayed_controls.cpp  device_enumerator.cpp  device_enumerator_sysfs.cpp  device_enumerator_udev.cpp  dma_buf_allocator.cpp  dma_heaps.cpp  egl.cpp  event_dispatcher.cpp  event_dispatcher_poll.cpp  event_notifier.cpp  extensible.cpp  fence.cpp  file.cpp  file_descriptor.cpp  (+64 more)
src/py/: meson.build
src/qcam/: cam_select_dialog.cpp  cam_select_dialog.h  dng_writer.cpp  dng_writer.h  format_converter.cpp  format_converter.h  main.cpp  main_window.cpp  main_window.h  meson.build  message_handler.cpp  message_handler.h  qt_event_dispatcher.cpp  qt_event_dispatcher.h  viewfinder.cpp  viewfinder.h  viewfinder_gl.cpp  viewfinder_gl.h  viewfinder_qt.cpp  viewfinder_qt.h
src/v4l2/: libcamerify.in  meson.build  v4l2_camera.cpp  v4l2_camera.h  v4l2_camera_file.cpp  v4l2_camera_file.h  v4l2_camera_proxy.cpp  v4l2_camera_proxy.h  v4l2_compat.cpp  v4l2_compat_manager.cpp  v4l2_compat_manager.h
subprojects/libpisp/: .clang-format  LICENSE  README.md  (+2 more)
test/: bayer-format.cpp  byte-stream-buffer.cpp  camera-sensor.cpp  color-space.cpp  delayed_contols.cpp  delayed_controls.cpp  event-dispatcher.cpp  event-thread.cpp  event.cpp  fence.cpp  file-descriptor.cpp  file.cpp  flags.cpp  geometry.cpp  hotplug-cameras.cpp  init.cpp  list-cameras.cpp  list.cpp  log.cpp  log_process.cpp  mapped-buffer.cpp  matrix.cpp  meson.build  message.cpp  object-delete.cpp  object-invoke.cpp  object.cpp  pixel-format.cpp  public-api.cpp  shared-fd.cpp  signal-threads.cpp  signal.cpp  span.cpp  test.cpp  threads.cpp  timer-fail.cpp  timer-thread.cpp  timer.cpp  transform.cpp  unique-fd.cpp  (+4 more)
utils/: abi-compat.sh  checkstyle.py  gen-controls.py  gen-debug-controls.py  gen-formats.py  gen-header.sh  gen-ipa-priv-key.sh  gen-ipa-pub-key.py  gen-shader-header.py  gen-shader-headers.sh  gen-version.sh  libcamera-bug-report  meson.build  release.sh  run-dist.sh  update-kernel-headers.sh  update-mojo.sh
(+1594 files in other folders)
